--- a/src/components/InfoPage.css
+++ b/src/components/InfoPage.css
@@ -42,8 +42,8 @@ img {
 }
 .comments{
     
-    width: 100%;
     padding: 5px;
+    width: 100vw;
     min-width: 340px;
     max-width: 600px;
 }
