--- a/src/components/InfoPage.css
+++ b/src/components/InfoPage.css
@@ -47,3 +47,9 @@ img {
     min-width: 340px;
     max-width: 600px;
 }
+.editbtn{
+    padding: 15px;
+    font-size: 13px;
+    text-decoration: underline;
+    cursor: pointer;
+}
